CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2003 by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/


2003.May.22 (0.9.11) [cvs]
  * Windows bugfixes.
    John Popplewell <john@johnnypops.demon.co.uk>

  * Mac OS X print update.  Get to a print dialog by holding Alt/Option when
    clicking "Print."  (Similar to how Windows handles it.)
    Darrell Walisser <walisser@mac.com>

  * Hebrew translation!
    Dovix <dovix2003@yahoo.com>
    Koby <kobybo@hotmail.com>

  * Updated Korean translations.
    Mark K. Kim <mark@cbreak.org>

  * UTF-8 support in the Text Tool!
    Robert Glowczynski <robertg@software.com.pl>,
    Mantas Kriauciunas <monte@mail.lt>

  * Added 'The Gimp' to docs/PNG.txt
    Mantas Kriauciunas <monte@mail.lt>

  * Set $OUTPUT_CHARSET for Japanese locale, to fix Win32 issue.
    TOYAMA Shin-ichi <kyone@tky2.3web.ne.jp>

  * Lithuanian translation.
    Mantas Kriauciunas <monte@mail.lt>,
    Rita Verbauskaite <verba@centras.lt>

  * Fixed bug that would cause some translated stamp sounds to not load.
    John Popplewell <john@johnnypops.demon.co.uk>

  * Added Dutch translation of (older version of) HTML documentation.
    (docs/html/README-nl.html; docs/nl/README.txt)
    Geert Stams <geert-csg@wanadoo.nl>

  * Updated Polish translations.
    Robert Glowczynski <robertg@software.com.pl>

  * Added Polish version of manpage.
    Robert Glowczynski <robertg@software.com.pl>

  * Restructured manpage sources (created "src/manpage/")

  * Fixed a few typos in the manpage.
    Robert Glowczynski <robertg@software.com.pl>

  * Fixed UTF-8 word-wrapping bug when there were no spaces
    (e.g., in some Japanese strings)
  
  * When a locale requiring its own font can't be used because the font
    is missing, Tux Paint STILL didn't work right.  Fixed.  (Set $LC_ALL=C)



2003.February.22 (0.9.10)
  * UTF-8 stamp descriptions word-wrap around spaces.
