@@ -7,7 +7,7 @@ bill@newbreedsoftware.com
 http://www.newbreedsoftware.com/tuxpaint/
 
 
-June 17, 2002 - April 25, 2003
+June 17, 2002 - May 23, 2003
 
 
 * Design and Coding:
