@@ -6,7 +6,7 @@ Copyright (c) 2003 by Bill Kendrick
 bill@newbreedsoftware.com
 http://www.newbreedsoftware.com/tuxpaint/
 
-May 22, 2003
+May 23, 2003
 
 
 LOW-PRIORITY DOCUMENTATION CHANGES:
@@ -80,6 +80,9 @@ PLATFORM-SPECIFIC BUGS:
 HIGH-PRIORITY TRANSLATION STUFF:
 --------------------------------
   * Right-justify right-to-left strings.
+
+  * Make right-to-left strings not wordwrap with the shortest line at
+    the top!
 
   * Finish current translations.
 
