@@ -7,7 +7,7 @@ bill@newbreedsoftware.com
 http://www.newbreedsoftware.com/tuxpaint/
 
 
-2003.May.22 (0.9.11) [cvs]
+2003.May.23 (0.9.11) [cvs]
   * Windows bugfixes.
     John Popplewell <john@johnnypops.demon.co.uk>
 
@@ -18,6 +18,8 @@ http://www.newbreedsoftware.com/tuxpaint/
   * Hebrew translation!
     Dovix <dovix2003@yahoo.com>
     Koby <kobybo@hotmail.com>
+
+  * Right-to-left language support (for Hebrew, for example).
 
   * Updated Korean translations.
     Mark K. Kim <mark@cbreak.org>
